--- a/home.html
+++ b/home.html
@@ -19,8 +19,7 @@
     </header>
     <main>
         <section id="home">
-            <h2>Accueil</h2>
-            <p>Ceci est la page d'accueil de mon site web. Explorez et amusez-vous !</p>
+            <h2>Accuei</h2>
         </section>
         <section id="about">
             <h2>À propos</h2>
